<resources>
    <string name="app_name">neptripdefault</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Neptrip!</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="nepali">Nepali</string>
    <string name="apple_en">Apple</string>
    <string name="apple_np">स्याउ </string>
    <string name="mango_en">Mango</string>
    <string name="mango_np">आँप </string>
    <string name="banana_en">Banana</string>
    <string name="banana_np">केरा </string>

    <string name="title_activity_usersetup">NepTrip - Profile Setup</string>
    <string name="user_setup_button">Get Started</string>
    <string name="user_login">Login as existing user</string>
    <string name="user_signup">Signup as new user</string>
    <string name="user_setup_content">Pick a username:</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="prompt_username">Pick a unique username</string>
    <string name="prompt_usernameExisting">Type your username</string>
    <string name="title_activity_dashboard_tabs">DashboardTabs</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dialogtest">dialogtest</string>

    <!-- Category -->
    <string-array name="category">
        <item>Choose City</item>
        <item>Kathmandu</item>
        <item>Bhaktapur</item>
        <item>Lalitpur</item>
        <item>Janakpur</item>
        <item>Karnali</item>
        <item>Mustang</item>
        <item>Manag</item>
        <item>Dolkha</item>
        <item>Pokhara</item>
        <item>Butwal</item>
        <item>Chitwan</item>
        <item>Gandaki</item>
        <item>Nagarkot</item>
    </string-array>

    <string-array name="date">
        <item>Choose Date</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Auguest</item>
        <item>September</item>
        <item>October</item>
        <item>Novenber</item>
        <item>December</item>

    </string-array>
</resources>
